# Beacons

beacon-rx/: Cargo.toml
beacon-rx/src/: enums.rs  fsm.rs  main.rs  structs.rs
beacon-tx/: Cargo.toml
esp32c3/beacon-rx/: Cargo.toml
esp32c3/beacon-tx/: Cargo.toml
esp32s3/beacon-tx/: Cargo.toml
shared/: Cargo.toml
shared/src/: enums.rs  lib.rs  structs.rs  utils.rs
